-- Mattermost Channels Database - Final schema (CREATE only)
-- Generated by scripts/build_final_schema.py from migrations.
-- Use for fresh installs. Do not run on existing databases.

CREATE TYPE outgoingoauthconnections_granttype AS ENUM ('client_credentials', 'password');

CREATE TYPE channel_type AS ENUM ('P', 'G', 'O', 'D');

CREATE TYPE team_type AS ENUM ('I', 'O');

CREATE TYPE upload_session_type AS ENUM ('attachment', 'import');

CREATE TABLE IF NOT EXISTS audits (
    action VARCHAR(512),
    createat bigint,
    extrainfo VARCHAR(1024),
    id VARCHAR(26) PRIMARY KEY,
    ipaddress VARCHAR(64),
    sessionid VARCHAR(26),
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS bots (
    createat bigint,
    deleteat bigint,
    description VARCHAR(1024),
    lasticonupdate bigint,
    ownerid VARCHAR(190),
    updateat bigint,
    userid VARCHAR(26) PRIMARY KEY
);

CREATE TABLE IF NOT EXISTS channelmemberhistory (
    channelid VARCHAR(26) NOT NULL,
    jointime bigint NOT NULL,
    leavetime bigint,
    userid VARCHAR(26) NOT NULL,
    PRIMARY KEY (channelid, userid, jointime)
);

CREATE TABLE IF NOT EXISTS channelmembers (
    autotranslation boolean NOT NULL DEFAULT false,
    autotranslationdisabled boolean NOT NULL DEFAULT false,
    channelid varchar(26) NOT NULL,
    lastupdateat bigint,
    lastviewedat bigint,
    mentioncount bigint,
    msgcount bigint,
    notifyprops jsonb USING notifyprops::jsonb,
    roles varchar(64),
    schemeadmin boolean,
    schemeguest boolean,
    schemeuser boolean,
    userid varchar(26) NOT NULL,
    PRIMARY KEY (channelid, userid)
);

CREATE TABLE IF NOT EXISTS channels (
    autotranslation boolean NOT NULL DEFAULT false,
    createat bigint,
    creatorid varchar(26),
    defaultcategoryname varchar(64) NOT NULL DEFAULT '',
    deleteat bigint,
    displayname varchar(64),
    extraupdateat bigint,
    groupconstrained boolean,
    header varchar(1024),
    id varchar(26) PRIMARY KEY,
    lastpostat bigint,
    name varchar(64),
    purpose varchar(128),
    schemeid varchar(26),
    shared boolean,
    teamid varchar(26),
    totalmsgcount bigint,
    type varchar(1),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS clusterdiscovery (
    clustername VARCHAR(64),
    createat bigint,
    gossipport integer,
    hostname VARCHAR(512),
    id VARCHAR(26) PRIMARY KEY,
    lastpingat bigint,
    port integer,
    type VARCHAR(64)
);

CREATE TABLE IF NOT EXISTS commands (
    autocomplete bool,
    autocompletedesc VARCHAR(1024),
    autocompletehint VARCHAR(1024),
    createat bigint,
    creatorid VARCHAR(26),
    deleteat bigint,
    description VARCHAR(128),
    displayname VARCHAR(64),
    iconurl VARCHAR(1024),
    id VARCHAR(26) PRIMARY KEY,
    method VARCHAR(1),
    pluginid VARCHAR(190),
    teamid VARCHAR(26),
    token VARCHAR(26),
    trigger VARCHAR(128),
    updateat bigint,
    url VARCHAR(1024),
    username VARCHAR(64)
);

CREATE TABLE IF NOT EXISTS commandwebhooks (
    channelid VARCHAR(26),
    commandid VARCHAR(26),
    createat bigint,
    id VARCHAR(26) PRIMARY KEY,
    rootid VARCHAR(26),
    usecount integer,
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS compliances (
    count integer,
    createat bigint,
    emails VARCHAR(1024),
    endat bigint,
    id VARCHAR(26) NOT NULL,
    keywords VARCHAR(512),
    startat bigint,
    status VARCHAR(64),
    type VARCHAR(64),
    userid VARCHAR(26),
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS contentflaggingcommonreviewers (
    userid VARCHAR(26) PRIMARY KEY
);

CREATE TABLE IF NOT EXISTS contentflaggingteamreviewers (
    teamid VARCHAR(26),
    userid VARCHAR(26),
    PRIMARY KEY (TeamId, UserId)
);

CREATE TABLE IF NOT EXISTS contentflaggingteamsettings (
    enabled BOOLEAN,
    teamid VARCHAR(26) PRIMARY KEY
);

CREATE TABLE IF NOT EXISTS emoji (
    createat bigint,
    creatorid VARCHAR(26),
    deleteat bigint,
    id VARCHAR(26) PRIMARY KEY,
    name VARCHAR(64),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS fileinfo (
    archived boolean NOT NULL DEFAULT false,
    channelid varchar(26),
    content text,
    createat bigint,
    creatorid VARCHAR(26),
    deleteat bigint,
    extension VARCHAR(64),
    haspreviewimage boolean,
    height integer,
    id VARCHAR(26) PRIMARY KEY,
    mimetype VARCHAR(256),
    minipreview bytea,
    name VARCHAR(256),
    path VARCHAR(512),
    postid VARCHAR(26),
    previewpath VARCHAR(512),
    remoteid varchar(26),
    size bigint,
    thumbnailpath VARCHAR(512),
    updateat bigint,
    width integer
);

CREATE TABLE IF NOT EXISTS groupchannels (
    autoadd boolean,
    channelid VARCHAR(26),
    createat bigint,
    deleteat bigint,
    groupid VARCHAR(26),
    primary KEY(groupid, channelid),
    schemeadmin boolean,
    updateat bigint
);

CREATE TABLE IF NOT EXISTS groupmembers (
    createat bigint,
    deleteat bigint,
    groupid VARCHAR(26),
    primary KEY(groupid, userid),
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS groupteams (
    autoadd boolean,
    createat bigint,
    deleteat bigint,
    groupid VARCHAR(26),
    primary KEY(groupid, teamid),
    schemeadmin boolean default false,
    teamid VARCHAR(26),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS incomingwebhooks (
    channelid VARCHAR(26),
    channellocked boolean,
    createat bigint,
    deleteat bigint,
    description VARCHAR(500),
    displayname VARCHAR(64),
    iconurl VARCHAR(1024),
    id VARCHAR(26) PRIMARY KEY,
    teamid VARCHAR(26),
    updateat bigint,
    userid VARCHAR(26),
    username VARCHAR(255)
);

CREATE TABLE IF NOT EXISTS jobs (
    createat bigint,
    data jsonb USING data::jsonb,
    id VARCHAR(26) PRIMARY KEY,
    lastactivityat bigint,
    priority bigint,
    progress bigint,
    startat bigint,
    status VARCHAR(32),
    type VARCHAR(32)
);

CREATE TABLE IF NOT EXISTS licenses (
    bytes VARCHAR(10000),
    createat bigint,
    id VARCHAR(26) NOT NULL,
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS linkmetadata (
    data jsonb USING data::jsonb,
    hash bigint NOT NULL,
    type VARCHAR(16),
    url VARCHAR(2048),
    PRIMARY KEY (hash)
);

CREATE TABLE IF NOT EXISTS oauthaccessdata (
    audience varchar(512) DEFAULT '',
    clientid VARCHAR(26),
    expiresat bigint,
    redirecturi VARCHAR(256),
    refreshtoken VARCHAR(26),
    scope VARCHAR(128),
    token VARCHAR(26) NOT NULL,
    userid VARCHAR(26),
    PRIMARY KEY (token)
);

CREATE TABLE IF NOT EXISTS oauthapps (
    callbackurls VARCHAR(1024),
    clientsecret VARCHAR(128),
    createat bigint,
    creatorid VARCHAR(26),
    description VARCHAR(512),
    homepage VARCHAR(256),
    iconurl VARCHAR(512),
    id VARCHAR(26) PRIMARY KEY,
    isdynamicallyregistered BOOLEAN DEFAULT FALSE,
    istrusted boolean,
    mattermostappid varchar(32),
    name VARCHAR(64),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS outgoingoauthconnections (
    audiences VARCHAR(1024),
    clientid varchar(255),
    clientsecret varchar(255),
    createat bigint,
    creatorid VARCHAR(26),
    credentialspassword varchar(255),
    credentialsusername varchar(255),
    granttype outgoingoauthconnections_granttype DEFAULT 'client_credentials',
    id varchar(26) PRIMARY KEY,
    name varchar(64),
    oauthtokenurl text,
    updateat bigint
);

CREATE TABLE IF NOT EXISTS outgoingwebhooks (
    callbackurls VARCHAR(1024),
    channelid VARCHAR(26),
    contenttype VARCHAR(128),
    createat bigint,
    creatorid VARCHAR(26),
    deleteat bigint,
    description VARCHAR(500),
    displayname VARCHAR(64),
    iconurl VARCHAR(1024),
    id VARCHAR(26) PRIMARY KEY,
    teamid VARCHAR(26),
    token VARCHAR(26),
    triggerwhen integer,
    triggerwords VARCHAR(1024),
    updateat bigint,
    username VARCHAR(64)
);

CREATE TABLE IF NOT EXISTS persistentnotifications (
    createat bigint,
    deleteat bigint,
    lastsentat bigint,
    postid VARCHAR(26) PRIMARY KEY,
    sentcount smallint
);

CREATE TABLE IF NOT EXISTS pluginkeyvaluestore (
    expireat bigint DEFAULT 0,
    pkey VARCHAR(50) NOT NULL,
    pluginid VARCHAR(190) NOT NULL,
    pvalue bytea,
    PRIMARY KEY (pluginid, pkey)
);

CREATE TABLE IF NOT EXISTS posts (
    channelid VARCHAR(26),
    createat bigint,
    deleteat bigint,
    editat bigint,
    fileids VARCHAR(300),
    filenames VARCHAR(4000),
    hashtags VARCHAR(1000),
    hasreactions boolean,
    id VARCHAR(26) PRIMARY KEY,
    ispinned boolean,
    message VARCHAR(65535),
    originalid VARCHAR(26),
    parentid VARCHAR(26),
    props VARCHAR(8000),
    remoteid VARCHAR(26),
    rootid VARCHAR(26),
    type VARCHAR(26),
    updateat bigint,
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS preferences (
    category varchar(32) NOT NULL,
    name varchar(32) NOT NULL,
    userid varchar(26) NOT NULL,
    value varchar(2000),
    PRIMARY KEY (userid, category, name)
);

CREATE TABLE IF NOT EXISTS productnoticeviewstate (
    noticeid VARCHAR(26),
    userid VARCHAR(26),
    viewed integer,
    PRIMARY KEY (userid, noticeid)
);

CREATE TABLE IF NOT EXISTS propertygroups (
    id varchar(26) PRIMARY KEY,
    name varchar(64) NOT NULL
);

CREATE TABLE IF NOT EXISTS publicchannels (
    deleteat bigint,
    displayname VARCHAR(64),
    header VARCHAR(1024),
    id VARCHAR(26) PRIMARY KEY,
    name VARCHAR(64),
    purpose VARCHAR(250),
    teamid VARCHAR(26),
    UNIQUE (name, teamid)
);

CREATE TABLE IF NOT EXISTS reactions (
    channelid varchar(26) NOT NULL DEFAULT '',
    createat bigint,
    deleteat bigint,
    emojiname VARCHAR(64) NOT NULL,
    postid VARCHAR(26) NOT NULL,
    remoteid VARCHAR(26),
    updateat bigint,
    userid VARCHAR(26) NOT NULL
);

CREATE TABLE IF NOT EXISTS readreceipts (
    expireat bigint NOT NULL,
    postid VARCHAR(26) NOT NULL,
    userid VARCHAR(26) NOT NULL,
    PRIMARY KEY (PostId, UserId)
);

CREATE TABLE IF NOT EXISTS recapchannels (
    actionitems TEXT,
    channelid VARCHAR(26) NOT NULL,
    channelname VARCHAR(64) NOT NULL,
    createat BIGINT NOT NULL,
    highlights TEXT,
    id VARCHAR(26) PRIMARY KEY,
    recapid VARCHAR(26) NOT NULL,
    sourcepostids TEXT,
    FOREIGN KEY (RecapId) REFERENCES Recaps(Id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS recaps (
    botid VARCHAR(26) DEFAULT '' NOT NULL,
    createat BIGINT NOT NULL,
    deleteat BIGINT NOT NULL,
    id VARCHAR(26) PRIMARY KEY,
    readat BIGINT DEFAULT 0 NOT NULL,
    status VARCHAR(32) NOT NULL,
    title VARCHAR(255) NOT NULL,
    totalmessagecount INT NOT NULL,
    updateat BIGINT NOT NULL,
    userid VARCHAR(26) NOT NULL
);

CREATE TABLE IF NOT EXISTS recentsearches (
    createat bigint NOT NULL,
    query jsonb,
    searchpointer int,
    userid CHAR(26),
    PRIMARY KEY (userid, searchpointer)
);

CREATE TABLE IF NOT EXISTS remoteclusters (
    createat bigint,
    creatorid VARCHAR(26),
    defaultteamid character varying(26) DEFAULT '',
    deleteat bigint DEFAULT 0,
    displayname VARCHAR(64),
    lastglobalusersyncat bigint DEFAULT 0,
    lastpingat bigint,
    name VARCHAR(64) NOT NULL,
    options SMALLINT NOT NULL DEFAULT 0,
    pluginid VARCHAR(190) NOT NULL DEFAULT '',
    remoteid VARCHAR(26) NOT NULL,
    remoteteamid VARCHAR(26),
    remotetoken VARCHAR(26),
    siteurl VARCHAR(512),
    token VARCHAR(26),
    topics VARCHAR(512),
    PRIMARY KEY (remoteid, name)
);

CREATE TABLE IF NOT EXISTS retentionidsfordeletion (
    id varchar(26) PRIMARY KEY,
    ids varchar(26)[],
    tablename varchar(64)
);

CREATE TABLE IF NOT EXISTS retentionpolicies (
    displayname VARCHAR(64),
    id VARCHAR(26),
    postduration bigint,
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS retentionpolicieschannels (
    channelid varchar(26),
    policyid varchar(26),
    PRIMARY KEY (channelid)
);

CREATE TABLE IF NOT EXISTS retentionpoliciesteams (
    policyid varchar(26),
    teamid varchar(26),
    PRIMARY KEY (teamid)
);

CREATE TABLE IF NOT EXISTS roles (
    builtin boolean,
    createat bigint,
    deleteat bigint,
    description VARCHAR(1024),
    displayname VARCHAR(128),
    id VARCHAR(26) PRIMARY KEY,
    name VARCHAR(64),
    permissions TEXT,
    schememanaged boolean,
    updateat bigint
);

CREATE TABLE IF NOT EXISTS scheduledposts (
    channelid VARCHAR(26) NOT NULL,
    createat bigint,
    errorcode VARCHAR(200),
    fileids VARCHAR(300),
    id VARCHAR(26) PRIMARY KEY,
    message VARCHAR(65535),
    priority text,
    processedat bigint,
    props VARCHAR(8000),
    rootid VARCHAR(26),
    scheduledat bigint NOT NULL,
    type text,
    updateat bigint,
    userid VARCHAR(26) NOT NULL
);

CREATE TABLE IF NOT EXISTS schemes (
    createat bigint,
    defaultchanneladminrole VARCHAR(64),
    defaultchannelguestrole VARCHAR(64),
    defaultchanneluserrole VARCHAR(64),
    defaultplaybookadminrole VARCHAR(64) DEFAULT ''::character varying,
    defaultplaybookmemberrole VARCHAR(64) DEFAULT ''::character varying,
    defaultrunadminrole VARCHAR(64) DEFAULT ''::character varying,
    defaultrunmemberrole VARCHAR(64) DEFAULT ''::character varying,
    defaultteamadminrole VARCHAR(64),
    defaultteamguestrole VARCHAR(64),
    defaultteamuserrole VARCHAR(64),
    deleteat bigint,
    description VARCHAR(1024),
    displayname VARCHAR(128),
    id VARCHAR(26) PRIMARY KEY,
    name VARCHAR(64),
    scope VARCHAR(32),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS sessions (
    createat bigint,
    deviceid VARCHAR(512),
    expirednotify boolean,
    expiresat bigint,
    id VARCHAR(26) PRIMARY KEY,
    isoauth boolean,
    lastactivityat bigint,
    props jsonb USING props::jsonb,
    roles VARCHAR(64),
    token VARCHAR(26),
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS sharedchannelattachments (
    createat bigint,
    fileid varchar(26),
    id varchar(26) NOT NULL,
    lastsyncat bigint,
    remoteid varchar(26),
    PRIMARY KEY (id),
    UNIQUE (fileid, remoteid)
);

CREATE TABLE IF NOT EXISTS sharedchannelremotes (
    channelid character varying(26) NOT NULL,
    createat bigint,
    creatorid character varying(26),
    deleteat bigint DEFAULT 0,
    id character varying(26) NOT NULL,
    isinviteaccepted boolean,
    isinviteconfirmed boolean,
    lastmemberssyncat bigint DEFAULT 0,
    lastpostcreateat bigint NOT NULL DEFAULT 0,
    lastpostcreateid VARCHAR(26),
    lastpostid character varying(26),
    lastpostupdateat bigint,
    primary KEY(id, channelid),
    remoteid character varying(26),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS sharedchannels (
    channelid character varying(26) NOT NULL,
    createat bigint,
    creatorid character varying(26),
    home boolean,
    readonly boolean,
    remoteid character varying(26),
    sharedisplayname character varying(64),
    shareheader character varying(1024),
    sharename character varying(64),
    sharepurpose character varying(250),
    teamid character varying(26),
    updateat bigint,
    PRIMARY KEY (channelid),
    UNIQUE (sharename, teamid)
);

CREATE TABLE IF NOT EXISTS sharedchannelusers (
    channelid varchar(26),
    createat bigint,
    id varchar(26) NOT NULL,
    lastmembershipsyncat bigint DEFAULT 0,
    lastsyncat bigint,
    remoteid varchar(26),
    userid varchar(26),
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS sidebarcategories (
    collapsed boolean,
    displayname VARCHAR(64),
    id VARCHAR(26),
    muted boolean,
    sorting VARCHAR(64),
    sortorder bigint,
    teamid VARCHAR(26),
    type VARCHAR(64),
    userid VARCHAR(26),
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS sidebarchannels (
    categoryid VARCHAR(26),
    channelid VARCHAR(26),
    sortorder bigint,
    userid VARCHAR(26),
    PRIMARY KEY (channelid, userid, categoryid)
);

CREATE TABLE IF NOT EXISTS status (
    dndendtime bigint,
    lastactivityat bigint,
    manual boolean,
    prevstatus VARCHAR(32),
    status VARCHAR(32),
    userid VARCHAR(26) PRIMARY KEY
);

CREATE TABLE IF NOT EXISTS systems (
    name VARCHAR(64),
    value VARCHAR(1024),
    PRIMARY KEY (name)
);

CREATE TABLE IF NOT EXISTS teammembers (
    deleteat bigint,
    roles VARCHAR(64),
    schemeadmin boolean,
    schemeguest boolean,
    schemeuser boolean,
    teamid VARCHAR(26) NOT NULL,
    userid VARCHAR(26) NOT NULL,
    PRIMARY KEY (teamid, userid)
);

CREATE TABLE IF NOT EXISTS teams (
    alloweddomains VARCHAR(1000),
    allowopeninvite boolean,
    cloudlimitsarchived bool NOT NULL DEFAULT FALSE,
    companyname VARCHAR(64),
    createat bigint,
    deleteat bigint,
    description VARCHAR(255),
    displayname VARCHAR(64),
    email VARCHAR(128),
    groupconstrained boolean,
    id VARCHAR(26) PRIMARY KEY,
    inviteid VARCHAR(32),
    lastteamiconupdate bigint,
    name VARCHAR(64),
    schemeid VARCHAR(26),
    type VARCHAR(255),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS temporaryposts (
    expireat BIGINT NOT NULL,
    fileids VARCHAR(300),
    message VARCHAR(65535),
    postid VARCHAR(26) PRIMARY KEY,
    type VARCHAR(26) NOT NULL
);

CREATE TABLE IF NOT EXISTS termsofservice (
    createat bigint,
    id VARCHAR(26) PRIMARY KEY,
    text VARCHAR(65535),
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS threadmemberships (
    following boolean,
    lastupdated bigint,
    lastviewed bigint,
    postid VARCHAR(26) NOT NULL,
    unreadmentions bigint,
    userid VARCHAR(26) NOT NULL,
    PRIMARY KEY (postid, userid)
);

CREATE TABLE IF NOT EXISTS threads (
    channelid VARCHAR(26),
    lastreplyat bigint,
    participants jsonb USING participants::jsonb,
    postid VARCHAR(26) PRIMARY KEY,
    replycount bigint,
    threaddeleteat bigint
);

CREATE TABLE IF NOT EXISTS tokens (
    createat bigint,
    extra VARCHAR(2048),
    token VARCHAR(64) PRIMARY KEY,
    type VARCHAR(64)
);

CREATE TABLE IF NOT EXISTS translations (
    confidence real,
    dstlang varchar        NOT NULL,
    meta jsonb,
    normhash char(64)       NOT NULL,
    objectid varchar(26)    NOT NULL,
    objecttype varchar        NULL,
    providerid varchar        NOT NULL,
    state varchar(20) NOT NULL,
    text text           NOT NULL,
    updateat bigint         NOT NULL,
    PRIMARY KEY (objectId, dstLang)
);

CREATE TABLE IF NOT EXISTS uploadsessions (
    channelid VARCHAR(26),
    createat bigint,
    filename VARCHAR(256),
    fileoffset bigint,
    filesize bigint,
    id VARCHAR(26) PRIMARY KEY,
    path VARCHAR(512),
    remoteid VARCHAR(26),
    reqfileid VARCHAR(26),
    type VARCHAR(32),
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS useraccesstokens (
    description VARCHAR(512),
    id VARCHAR(26) PRIMARY KEY,
    isactive boolean,
    token VARCHAR(26) UNIQUE,
    userid VARCHAR(26)
);

CREATE TABLE IF NOT EXISTS usergroups (
    allowreference bool,
    createat bigint,
    deleteat bigint,
    description VARCHAR(1024),
    displayname VARCHAR(128),
    id VARCHAR(26) PRIMARY KEY,
    name VARCHAR(64),
    remoteid VARCHAR(48),
    source VARCHAR(64),
    updateat bigint
);

CREATE TABLE IF NOT EXISTS users (
    allowmarketing boolean,
    authdata VARCHAR(128) UNIQUE,
    authservice VARCHAR(32),
    createat bigint,
    deleteat bigint,
    email VARCHAR(128) UNIQUE,
    emailverified boolean,
    failedattempts integer,
    firstname VARCHAR(64),
    id VARCHAR(26) PRIMARY KEY,
    lastlogin bigint NOT NULL DEFAULT 0,
    lastname VARCHAR(64),
    lastpasswordupdate bigint,
    lastpictureupdate bigint,
    locale VARCHAR(5),
    mfaactive boolean,
    mfasecret VARCHAR(128),
    mfausedtimestamps jsonb NULL,
    nickname VARCHAR(64),
    notifyprops jsonb USING notifyprops::jsonb,
    password VARCHAR(128),
    position VARCHAR(128),
    props jsonb USING props::jsonb,
    remoteid VARCHAR(26),
    roles VARCHAR(256),
    timezone jsonb USING timezone::jsonb,
    updateat bigint,
    username VARCHAR(64) UNIQUE
);

CREATE TABLE IF NOT EXISTS usertermsofservice (
    createat bigint,
    termsofserviceid VARCHAR(26),
    userid VARCHAR(26) PRIMARY KEY
);

CREATE INDEX IF NOT EXISTS idx_audits_user_id ON audits (userid);

CREATE INDEX IF NOT EXISTS idx_channel_search_txt ON channels using gin (to_tsvector('english'::regconfig, (((((name)::text || ' '::text) || (displayname)::text) || ' '::text) || (purpose)::text)));

CREATE INDEX IF NOT EXISTS idx_channelmembers_autotranslation_enabled
    ON channelmembers (channelid)
    WHERE autotranslation = true;

CREATE INDEX IF NOT EXISTS idx_channelmembers_channel_id_scheme_guest_user_id ON channelmembers(channelid, schemeguest, userid);

CREATE INDEX IF NOT EXISTS idx_channelmembers_user_id_channel_id_last_viewed_at ON channelmembers(userid, channelid, lastviewedat);

CREATE INDEX IF NOT EXISTS idx_channels_autotranslation_enabled
    ON channels (id)
    WHERE autotranslation = true;

CREATE INDEX IF NOT EXISTS idx_channels_create_at ON channels (createat);

CREATE INDEX IF NOT EXISTS idx_channels_delete_at ON channels (deleteat);

CREATE INDEX IF NOT EXISTS idx_channels_displayname_lower ON channels (lower(displayname));

CREATE INDEX IF NOT EXISTS idx_channels_name_lower ON channels (lower(name));

CREATE INDEX IF NOT EXISTS idx_channels_scheme_id ON channels (schemeid);

CREATE INDEX IF NOT EXISTS idx_channels_team_id_display_name ON channels(teamid, displayname);

CREATE INDEX IF NOT EXISTS idx_channels_team_id_type ON channels(teamid, type);

CREATE INDEX IF NOT EXISTS idx_channels_update_at ON channels (updateat);

CREATE INDEX IF NOT EXISTS idx_command_create_at ON commands (createat);

CREATE INDEX IF NOT EXISTS idx_command_delete_at ON commands (deleteat);

CREATE INDEX IF NOT EXISTS idx_command_team_id ON commands (teamid);

CREATE INDEX IF NOT EXISTS idx_command_update_at ON commands (updateat);

CREATE INDEX IF NOT EXISTS idx_command_webhook_create_at ON commandwebhooks (createat);

CREATE INDEX IF NOT EXISTS idx_contentflaggingteamreviewers_userid ON ContentFlaggingTeamReviewers (userid);

CREATE INDEX IF NOT EXISTS idx_emoji_create_at ON emoji (createat);

CREATE INDEX IF NOT EXISTS idx_emoji_delete_at ON emoji (deleteat);

CREATE INDEX IF NOT EXISTS idx_emoji_update_at ON emoji (updateat);

CREATE INDEX IF NOT EXISTS idx_fileinfo_channel_id_create_at ON fileinfo(channelid, createat);

CREATE INDEX IF NOT EXISTS idx_fileinfo_content_txt ON fileinfo USING gin(to_tsvector('english', content));

CREATE INDEX IF NOT EXISTS idx_fileinfo_create_at ON fileinfo (createat);

CREATE INDEX IF NOT EXISTS idx_fileinfo_delete_at ON fileinfo (deleteat);

CREATE INDEX IF NOT EXISTS idx_fileinfo_extension_at ON fileinfo (extension);

CREATE INDEX IF NOT EXISTS idx_fileinfo_name_splitted ON fileinfo USING gin (to_tsvector('english'::regconfig, translate((name)::text, '.,-'::text, '   '::text)));

CREATE INDEX IF NOT EXISTS idx_fileinfo_name_txt ON fileinfo USING gin(to_tsvector('english', name));

CREATE INDEX IF NOT EXISTS idx_fileinfo_postid_at ON fileinfo (postid);

CREATE INDEX IF NOT EXISTS idx_fileinfo_update_at ON fileinfo (updateat);

CREATE INDEX IF NOT EXISTS idx_groupchannels_channelid ON groupchannels (channelid);

CREATE INDEX IF NOT EXISTS idx_groupchannels_schemeadmin ON groupchannels(schemeadmin);

CREATE INDEX IF NOT EXISTS idx_groupmembers_create_at ON groupmembers (createat);

CREATE INDEX IF NOT EXISTS idx_groupteams_schemeadmin ON groupchannels (schemeadmin);

CREATE INDEX IF NOT EXISTS idx_groupteams_teamid ON groupteams (teamid);

CREATE INDEX IF NOT EXISTS idx_incoming_webhook_create_at ON incomingwebhooks (createat);

CREATE INDEX IF NOT EXISTS idx_incoming_webhook_delete_at ON incomingwebhooks (deleteat);

CREATE INDEX IF NOT EXISTS idx_incoming_webhook_team_id ON incomingwebhooks (teamid);

CREATE INDEX IF NOT EXISTS idx_incoming_webhook_update_at ON incomingwebhooks (updateat);

CREATE INDEX IF NOT EXISTS idx_incoming_webhook_user_id ON incomingwebhooks (userid);

CREATE INDEX IF NOT EXISTS idx_jobs_status_type ON jobs(status, type);

CREATE INDEX IF NOT EXISTS idx_jobs_type ON jobs (type);

CREATE INDEX IF NOT EXISTS idx_link_metadata_url_timestamp ON linkmetadata (url, "timestamp");

CREATE INDEX IF NOT EXISTS idx_notice_views_notice_id ON productnoticeviewstate(noticeid);

CREATE INDEX IF NOT EXISTS idx_notice_views_timestamp ON productnoticeviewstate("timestamp");

CREATE INDEX IF NOT EXISTS idx_oauthaccessdata_refresh_token ON oauthaccessdata (refreshtoken);

CREATE INDEX IF NOT EXISTS idx_oauthaccessdata_user_id ON oauthaccessdata (userid);

CREATE INDEX IF NOT EXISTS idx_oauthapps_creator_id ON oauthapps (creatorid);

CREATE INDEX IF NOT EXISTS idx_outgoing_webhook_create_at ON outgoingwebhooks (createat);

CREATE INDEX IF NOT EXISTS idx_outgoing_webhook_delete_at ON outgoingwebhooks (deleteat);

CREATE INDEX IF NOT EXISTS idx_outgoing_webhook_team_id ON outgoingwebhooks (teamid);

CREATE INDEX IF NOT EXISTS idx_outgoing_webhook_update_at ON outgoingwebhooks (updateat);

CREATE INDEX IF NOT EXISTS idx_outgoingoauthconnections_name ON outgoingoauthconnections (name);

CREATE INDEX IF NOT EXISTS idx_posts_channel_id_delete_at_create_at ON posts(channelid, deleteat, createat);

CREATE INDEX IF NOT EXISTS idx_posts_channel_id_update_at ON posts(channelid, updateat);

CREATE INDEX IF NOT EXISTS idx_posts_create_at ON posts(createat);

CREATE INDEX IF NOT EXISTS idx_posts_create_at_id on posts(createat, id);

CREATE INDEX IF NOT EXISTS idx_posts_delete_at ON posts(deleteat);

CREATE INDEX IF NOT EXISTS idx_posts_hashtags_txt ON posts USING gin(to_tsvector('english', hashtags));

CREATE INDEX IF NOT EXISTS idx_posts_is_pinned ON posts(ispinned);

CREATE INDEX IF NOT EXISTS idx_posts_message_txt ON posts USING gin(to_tsvector('english', message));

CREATE INDEX IF NOT EXISTS idx_posts_root_id_delete_at ON posts(rootid, deleteat);

CREATE INDEX IF NOT EXISTS idx_posts_update_at ON posts(updateat);

CREATE INDEX IF NOT EXISTS idx_posts_user_id ON posts(userid);

CREATE INDEX IF NOT EXISTS idx_preferences_category ON preferences(category);

CREATE INDEX IF NOT EXISTS idx_preferences_name ON preferences(name);

CREATE INDEX IF NOT EXISTS idx_publicchannels_delete_at ON publicchannels (deleteat);

CREATE INDEX IF NOT EXISTS idx_publicchannels_displayname_lower ON publicchannels (lower(displayname));

CREATE INDEX IF NOT EXISTS idx_publicchannels_name_lower ON publicchannels (lower(name));

CREATE INDEX IF NOT EXISTS idx_publicchannels_search_txt ON publicchannels using gin (to_tsvector('english'::regconfig, (((((name)::text || ' '::text) || (displayname)::text) || ' '::text) || (purpose)::text)));

CREATE INDEX IF NOT EXISTS idx_publicchannels_team_id ON publicchannels (teamid);

CREATE INDEX IF NOT EXISTS idx_reactions_channel_id on reactions (channelid);

CREATE INDEX IF NOT EXISTS idx_read_receipts_post_id ON ReadReceipts(PostId);

CREATE INDEX IF NOT EXISTS idx_read_receipts_user_id_post_id_expire_at ON ReadReceipts(UserId, PostId, ExpireAt);

CREATE INDEX IF NOT EXISTS idx_recap_channels_channel_id ON RecapChannels(ChannelId);

CREATE INDEX IF NOT EXISTS idx_recap_channels_recap_id ON RecapChannels(RecapId);

CREATE INDEX IF NOT EXISTS idx_recaps_bot_id ON Recaps(BotID);

CREATE INDEX IF NOT EXISTS idx_recaps_create_at ON Recaps(CreateAt);

CREATE INDEX IF NOT EXISTS idx_recaps_user_id ON Recaps(UserId);

CREATE INDEX IF NOT EXISTS idx_recaps_user_id_delete_at ON Recaps(UserId, DeleteAt);

CREATE INDEX IF NOT EXISTS idx_recaps_user_id_read_at ON Recaps(UserId, ReadAt);

CREATE INDEX IF NOT EXISTS idx_retentionidsfordeletion_tablename ON retentionidsfordeletion (tablename);

CREATE INDEX IF NOT EXISTS IDX_RetentionPolicies_DisplayName ON retentionpolicies (displayname);

CREATE INDEX IF NOT EXISTS IDX_RetentionPoliciesChannels_PolicyId ON retentionpolicieschannels (policyid);

CREATE INDEX IF NOT EXISTS IDX_RetentionPoliciesTeams_PolicyId ON retentionpoliciesteams (policyid);

CREATE INDEX IF NOT EXISTS idx_scheduledposts_userid_channel_id_scheduled_at ON ScheduledPosts (UserId, ChannelId, ScheduledAt);

CREATE INDEX IF NOT EXISTS idx_schemes_channel_admin_role ON schemes (defaultchanneladminrole);

CREATE INDEX IF NOT EXISTS idx_schemes_channel_guest_role ON schemes (defaultchannelguestrole);

CREATE INDEX IF NOT EXISTS idx_schemes_channel_user_role ON schemes (defaultchanneluserrole);

CREATE INDEX IF NOT EXISTS idx_sessions_create_at ON sessions (createat);

CREATE INDEX IF NOT EXISTS idx_sessions_expires_at ON sessions (expiresat);

CREATE INDEX IF NOT EXISTS idx_sessions_last_activity_at ON sessions (lastactivityat);

CREATE INDEX IF NOT EXISTS idx_sessions_token ON sessions (token);

CREATE INDEX IF NOT EXISTS idx_sessions_user_id ON sessions (userid);

CREATE INDEX IF NOT EXISTS idx_sharedchannelusers_remote_id ON sharedchannelusers(remoteid);

CREATE INDEX IF NOT EXISTS idx_sidebarcategories_userid_teamid on sidebarcategories (userid, teamid);

CREATE INDEX IF NOT EXISTS idx_status_status_dndendtime ON status(status, dndendtime);

CREATE INDEX IF NOT EXISTS idx_teammembers_delete_at ON TeamMembers (deleteat);

CREATE INDEX IF NOT EXISTS idx_teammembers_user_id ON TeamMembers (userid);

CREATE INDEX IF NOT EXISTS idx_teams_create_at ON teams (createat);

CREATE INDEX IF NOT EXISTS idx_teams_delete_at ON teams (deleteat);

CREATE INDEX IF NOT EXISTS idx_teams_invite_id ON teams (inviteid);

CREATE INDEX IF NOT EXISTS idx_teams_scheme_id ON teams (schemeid);

CREATE INDEX IF NOT EXISTS idx_teams_update_at ON teams (updateat);

CREATE INDEX IF NOT EXISTS idx_temporary_posts_expire_at ON TemporaryPosts(expireat);

CREATE INDEX IF NOT EXISTS idx_thread_memberships_last_update_at ON threadmemberships(lastupdated);

CREATE INDEX IF NOT EXISTS idx_thread_memberships_last_view_at ON threadmemberships(lastviewed);

CREATE INDEX IF NOT EXISTS idx_thread_memberships_user_id ON threadmemberships(userid);

CREATE INDEX IF NOT EXISTS idx_threads_channel_id_last_reply_at ON threads(channelid, lastreplyat);

CREATE INDEX IF NOT EXISTS idx_translations_state 
ON translations(state) 
WHERE state IN ('processing');

CREATE INDEX IF NOT EXISTS idx_translations_updateat
    ON translations (updateAt DESC);

CREATE INDEX IF NOT EXISTS idx_uploadsessions_create_at ON uploadsessions(createat);

CREATE INDEX IF NOT EXISTS idx_uploadsessions_type ON uploadsessions(type);

CREATE INDEX IF NOT EXISTS idx_uploadsessions_user_id ON uploadsessions(userid);

CREATE INDEX IF NOT EXISTS idx_user_access_tokens_user_id ON useraccesstokens(userid);

CREATE INDEX IF NOT EXISTS idx_usergroups_delete_at ON usergroups (deleteat);

CREATE INDEX IF NOT EXISTS idx_usergroups_displayname ON usergroups(displayname);

CREATE INDEX IF NOT EXISTS idx_usergroups_remote_id ON usergroups (remoteid);

CREATE INDEX IF NOT EXISTS idx_users_all_no_full_name_txt ON users USING gin(to_tsvector('english', username || ' ' || nickname || ' ' || email));

CREATE INDEX IF NOT EXISTS idx_users_all_txt ON users USING gin(to_tsvector('english', username || ' ' || firstname || ' ' || lastname || ' ' || nickname || ' ' || email));

CREATE INDEX IF NOT EXISTS idx_users_create_at ON users (createat);

CREATE INDEX IF NOT EXISTS idx_users_delete_at ON users (deleteat);

CREATE INDEX IF NOT EXISTS idx_users_email_lower_textpattern ON users (lower(email) text_pattern_ops);

CREATE INDEX IF NOT EXISTS idx_users_firstname_lower_textpattern ON users (lower(firstname) text_pattern_ops);

CREATE INDEX IF NOT EXISTS idx_users_id_locale
    ON users (id, locale);

CREATE INDEX IF NOT EXISTS idx_users_lastname_lower_textpattern ON users (lower(lastname) text_pattern_ops);

CREATE INDEX IF NOT EXISTS idx_users_names_no_full_name_txt ON users USING gin(to_tsvector('english', username || ' ' || nickname));

CREATE INDEX IF NOT EXISTS idx_users_names_txt ON users USING gin(to_tsvector('english', username || ' ' || firstname || ' ' || lastname || ' ' || nickname));

CREATE INDEX IF NOT EXISTS idx_users_nickname_lower_textpattern ON users (lower(nickname) text_pattern_ops);

CREATE INDEX IF NOT EXISTS idx_users_update_at ON users (updateat);

CREATE INDEX IF NOT EXISTS idx_users_username_lower_textpattern ON users (lower(username) text_pattern_ops);

CREATE MATERIALIZED VIEW IF NOT EXISTS AttributeView AS
SELECT
    pv."GroupID",
    pv."TargetID",
    pv."TargetType",
    jsonb_object_agg(
        pf."Name",
        CASE
            WHEN pf."Type" = 'select' THEN (
                SELECT to_jsonb(options.name)
                FROM jsonb_to_recordset(pf."Attrs"->'options') AS options(id text, name text)
                WHERE options.id = pv."Value" #>> '{}'
                LIMIT 1
            )
            WHEN pf."Type" = 'multiselect' AND jsonb_typeof(pv."Value") = 'array' THEN (
                SELECT jsonb_agg(option_names.name)
                FROM jsonb_array_elements_text(pv."Value") AS option_id
                JOIN jsonb_to_recordset(pf."Attrs"->'options') AS option_names(id text, name text)
                ON option_id = option_names.id
            )
            ELSE pv."Value"
        END
    ) AS "Attributes"
FROM "PropertyValues" pv
LEFT JOIN "PropertyFields" pf ON pf."ID" = pv."FieldID"
WHERE (pv."DeleteAt" = 0 OR pv."DeleteAt" IS NULL) AND (pf."DeleteAt" = 0 OR pf."DeleteAt" IS NULL)
GROUP BY pv."GroupID", pv."TargetID", pv."TargetType";